@@ -2,6 +2,11 @@ django-siteajax changelog
 =========================
 
 
+Unreleased
+----------
++ Ajax objects are now lazy to allow faster middleware processing.
+
+
 v0.2.0 [2021-05-26]
 -------------------
 + Added 'Ajax.restore_history' flag.
